rework all cmakelist files with auto file collection. except leddevices (need further restructuring)

--- a/libsrc/boblightserver/CMakeLists.txt
+++ b/libsrc/boblightserver/CMakeLists.txt
@@ -3,22 +3,12 @@
 set(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/boblightserver)
 set(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/boblightserver)
 
-set(BoblightServer_HEADERS
-	${CURRENT_HEADER_DIR}/BoblightServer.h
-	${CURRENT_SOURCE_DIR}/BoblightClientConnection.h
-)
+FILE ( GLOB BoblightServer_SOURCES "${CURRENT_HEADER_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
 
-set(BoblightServer_SOURCES
-	${CURRENT_SOURCE_DIR}/BoblightServer.cpp
-	${CURRENT_SOURCE_DIR}/BoblightClientConnection.cpp
-)
-
-add_library(boblightserver
-	${BoblightServer_HEADERS}
-	${BoblightServer_SOURCES}
-)
+add_library(boblightserver ${BoblightServer_SOURCES} )
 
 target_link_libraries(boblightserver
 	hyperion
 	hyperion-utils
-	${QT_LIBRARIES})
+	${QT_LIBRARIES}
+)
