--- a/libsrc/effectengine/CMakeLists.txt
+++ b/libsrc/effectengine/CMakeLists.txt
@@ -9,19 +9,9 @@ include_directories(${PYTHON_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS}/..)
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/effectengine)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/effectengine)
 
-SET(EffectEngineHEADERS
-	${CURRENT_HEADER_DIR}/EffectDefinition.h
-	${CURRENT_HEADER_DIR}/EffectEngine.h
-	${CURRENT_SOURCE_DIR}/Effect.h
-)
-
-SET(EffectEngineSOURCES
-	${CURRENT_SOURCE_DIR}/EffectEngine.cpp
-	${CURRENT_SOURCE_DIR}/Effect.cpp
-)
-
-
+FILE ( GLOB EffectEngineSOURCES "${CURRENT_HEADER_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
 FILE ( GLOB effectFiles RELATIVE ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/effects/* )
+
 SET ( HYPERION_EFFECTS_RES "")
 FOREACH( f ${effectFiles} )
 	GET_FILENAME_COMPONENT(fname ${f} NAME)
@@ -34,7 +24,6 @@ SET(EffectEngine_RESOURCES ${CMAKE_BINARY_DIR}/EffectEngine.qrc)
 qt5_add_resources(EffectEngine_RESOURCES_RCC ${EffectEngine_RESOURCES} ) # OPTIONS "-no-compress"
 
 add_library(effectengine
-	${EffectEngineHEADERS}
 	${EffectEngine_RESOURCES_RCC}
 	${EffectEngineSOURCES}
 )
@@ -43,4 +32,5 @@ target_link_libraries(effectengine
 	hyperion
 	Qt5::Core
 	Qt5::Gui
-	${PYTHON_LIBRARIES})
+	${PYTHON_LIBRARIES}
+)
