--- a/libsrc/grabber/amlogic/CMakeLists.txt
+++ b/libsrc/grabber/amlogic/CMakeLists.txt
@@ -4,26 +4,14 @@ INCLUDE (CheckIncludeFiles)
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/grabber)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/grabber/amlogic)
 
-SET(AmlogicHEADERS
-	${CURRENT_HEADER_DIR}/AmlogicGrabber.h
-	${CURRENT_HEADER_DIR}/AmlogicWrapper.h
-)
-
-SET(AmlogicSOURCES
-	${CURRENT_SOURCE_DIR}/AmlogicWrapper.cpp
-	${CURRENT_SOURCE_DIR}/AmlogicGrabber.cpp
-)
+FILE ( GLOB AmlogicSOURCES "${CURRENT_HEADER_DIR}/Amlogic*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
 
 CHECK_INCLUDE_FILES ("amcodec/amports/amstream.h" HAVE_AML_HEADER)
 IF (${HAVE_AML_HEADER})
 	ADD_DEFINITIONS( -DHAVE_AML_HEADER )
 ENDIF()
 
-
-add_library(amlogic-grabber
-	${AmlogicHEADERS}
-	${AmlogicSOURCES}
-)
+add_library(amlogic-grabber ${AmlogicSOURCES} )
 
 target_link_libraries(amlogic-grabber
 	hyperion
