--- a/libsrc/kodivideochecker/CMakeLists.txt
+++ b/libsrc/kodivideochecker/CMakeLists.txt
@@ -3,19 +3,9 @@
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/kodivideochecker)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/kodivideochecker)
 
-SET(KODIVideoChecker_HEADERS
-	${CURRENT_HEADER_DIR}/KODIVideoChecker.h
-)
+FILE ( GLOB KODIVideoChecker_SOURCES "${CURRENT_HEADER_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
 
-SET(KODIVideoChecker_SOURCES
-	${CURRENT_SOURCE_DIR}/KODIVideoChecker.cpp
-)
-
-
-add_library(kodivideochecker
-	${KODIVideoChecker_HEADERS}
-	${KODIVideoChecker_SOURCES}
-)
+add_library(kodivideochecker ${KODIVideoChecker_SOURCES} )
 
 target_link_libraries(kodivideochecker
 	hyperion
