--- a/libsrc/udplistener/CMakeLists.txt
+++ b/libsrc/udplistener/CMakeLists.txt
@@ -3,20 +3,12 @@
 set(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/udplistener)
 set(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/udplistener)
 
-set(UDPListener_HEADERS
-	${CURRENT_HEADER_DIR}/UDPListener.h
-)
+FILE ( GLOB UDPListener_SOURCES "${CURRENT_HEADER_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
 
-set(UDPListener_SOURCES
-	${CURRENT_SOURCE_DIR}/UDPListener.cpp
-)
-
-add_library(udplistener
-	${UDPListener_HEADERS}
-	${UDPListener_SOURCES}
-)
+add_library(udplistener ${UDPListener_SOURCES} )
 
 target_link_libraries(udplistener
 	hyperion
 	hyperion-utils
-	${QT_LIBRARIES})
+	${QT_LIBRARIES}
+)
