--- a/libsrc/grabber/v4l2/CMakeLists.txt
+++ b/libsrc/grabber/v4l2/CMakeLists.txt
@@ -2,21 +2,9 @@
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/grabber)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/grabber/v4l2)
 
-SET(V4L2_HEADERS
-	${CURRENT_HEADER_DIR}/V4L2Grabber.h
-	${CURRENT_HEADER_DIR}/V4L2Wrapper.h
-	${CURRENT_HEADER_DIR}/VideoStandard.h
-)
+FILE ( GLOB V4L2_SOURCES "${CURRENT_HEADER_DIR}/V4L2*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
 
-SET(V4L2_SOURCES
-	${CURRENT_SOURCE_DIR}/V4L2Grabber.cpp
-	${CURRENT_SOURCE_DIR}/V4L2Wrapper.cpp
-)
-
-add_library(v4l2-grabber
-	${V4L2_HEADERS}
-	${V4L2_SOURCES}
-)
+add_library(v4l2-grabber ${V4L2_SOURCES} )
 
 target_link_libraries(v4l2-grabber
 	hyperion
