rework structure of leddevice source tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,10 +27,12 @@ IF ( ${CMAKE_SYSTEM} MATCHES "Linux" )
 	SET ( DEFAULT_V4L2   ON  )
 	SET ( DEFAULT_SPIDEV ON )
 	SET ( DEFAULT_FB     ON )
+	SET ( DEFAULT_USB_HID ON )
 ELSE()
 	SET ( DEFAULT_V4L2   OFF )
-	SET ( DEFAULT_SPIDEV OFF )
 	SET ( DEFAULT_FB     OFF )
+	SET ( DEFAULT_SPIDEV OFF )
+	SET ( DEFAULT_USB_HID OFF )
 ENDIF()
 
 if (APPLE)
@@ -67,7 +69,8 @@ message( STATUS "PLATFORM: ${PLATFORM}")
 if ( "${PLATFORM}" MATCHES "osx" )
 	SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/local/opt/qt5" CACHE STRING "path to your QT5 files" )
 	include_directories("/opt/X11/include/")
-	SET ( DEFAULT_OSX        ON  )
+	SET ( DEFAULT_OSX        ON )
+	SET ( DEFAULT_USB_HID    ON )
 elseif ( "${PLATFORM}" STREQUAL "rpi" )
 	SET ( DEFAULT_DISPMANX   ON )
 	SET ( DEFAULT_WS281XPWM  ON )
@@ -115,8 +118,11 @@ message(STATUS "ENABLE_TINKERFORGE = ${ENABLE_TINKERFORGE}")
 option(ENABLE_V4L2 "Enable the V4L2 grabber" ${DEFAULT_V4L2})
 message(STATUS "ENABLE_V4L2 = ${ENABLE_V4L2}")
 
-option(ENABLE_WS281XPWM   "Enable the WS281x-PWM device" ${DEFAULT_WS281XPWM} )
+option(ENABLE_WS281XPWM "Enable the WS281x-PWM device" ${DEFAULT_WS281XPWM} )
 message(STATUS "ENABLE_WS281XPWM = ${ENABLE_WS281XPWM}")
+
+option(ENABLE_USB_HID "Enable the libusb and hid devices" ${DEFAULT_USB_HID} )
+message(STATUS "ENABLE_USB_HID = ${ENABLE_USB_HID}")
 
 option(ENABLE_X11 "Enable the X11 grabber" ${DEFAULT_X11})
 message(STATUS "ENABLE_X11 = ${ENABLE_X11}")
