--- a/libsrc/grabber/dispmanx/CMakeLists.txt
+++ b/libsrc/grabber/dispmanx/CMakeLists.txt
@@ -1,6 +1,11 @@
 # Find the BCM-package (VC control)
-find_package(BCM REQUIRED)
-include_directories(${BCM_INCLUDE_DIRS})
+IF ( "${PLATFORM}" MATCHES rpi)
+	find_package(BCM REQUIRED)
+	include_directories(${BCM_INCLUDE_DIRS})
+ELSE()
+	SET(BCM_INCLUDE_DIRS "")
+	SET(BCM_LIBRARIES "")
+ENDIF()
 
 # Define the current source locations
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/grabber)
