--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -21,6 +21,13 @@ target_link_libraries(hyperiond
 )
 
 if (ENABLE_DISPMANX)
+	IF ( "${PLATFORM}" MATCHES rpi)
+		find_package(BCM REQUIRED)
+		include_directories(${BCM_INCLUDE_DIRS})
+	ELSE()
+		SET(BCM_INCLUDE_DIRS "")
+		SET(BCM_LIBRARIES "")
+	ENDIF()
 	target_link_libraries(hyperiond dispmanx-grabber)
 endif ()
 
