use hyperion-utils for json mod

--- a/src/hyperiond-starter/CMakeLists.txt
+++ b/src/hyperiond-starter/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(hyperiond-starter
 
 target_link_libraries(hyperiond-starter
 	hyperion
+	hyperion-utils
 	Qt5::Core
 	Qt5::Network
 )
