--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,9 @@ if ( "${PLATFORM}" MATCHES "osx" )
 	FIRSTSUBDIR(SUBDIRPY "/usr/local/Cellar/python3")
 	SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${SUBDIRQT} ${SUBDIRPY} "/usr/local/opt/qt5" )
 	include_directories("/opt/X11/include/")
+	message("####CMAKE PREFIX PATH### ${CMAKE_PREFIX_PATH}")
+	message("####SUBDIRQT### ${SUBDIRQT}")
+	message("####SUBDIRPY### ${SUBDIRPY}")
 	SET ( DEFAULT_OSX        ON )
 	SET ( DEFAULT_USB_HID    ON )
 elseif ( "${PLATFORM}" STREQUAL "rpi" )
