--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ MACRO(FIRSTSUBDIR result curdir)
   FOREACH(child ${children})
     IF(IS_DIRECTORY ${curdir}/${child})
       LIST(APPEND dirlist "${curdir}/${child}")
-	  BREAK()
+	  #BREAK()
     ENDIF()
   ENDFOREACH()
   SET(${result} ${dirlist})
@@ -81,7 +81,7 @@ ENDMACRO()
 if ( "${PLATFORM}" MATCHES "osx" )
 	# add specific prefix paths
 	FIRSTSUBDIR(SUBDIRQT "/usr/local/Cellar/qt5")
-	FIRSTSUBDIR(SUBDIRPY "/Library/Frameworks/Python.framework")
+	FIRSTSUBDIR(SUBDIRPY "/usr/local/opt")
 	SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${SUBDIRQT} ${SUBDIRPY} "/usr/local/opt/qt5" )
 	include_directories("/opt/X11/include/")
 	message("####CMAKE PREFIX PATH### ${CMAKE_PREFIX_PATH}")
