--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,11 +80,13 @@ ENDMACRO()
 
 if ( "${PLATFORM}" MATCHES "osx" )
 	# add specific prefix paths
-	FIRSTSUBDIR(SUBDIRQT "/usr/local/Cellar/qt5")
-	FIRSTSUBDIR(SUBDIRPY "/usr/local/opt/python3")
+	FIRSTSUBDIR(SUBDIRQT "/usr/local/opt/qt5")
+	FIRSTSUBDIR(SUBDIRPY "/usr/local/opt/python3/Frameworks/Python.framework/Versions")
 	SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${SUBDIRQT} ${SUBDIRPY} "/usr/local/opt/qt5" )
 	include_directories("/opt/X11/include/")
 	message("####CMAKE PREFIX PATH### ${CMAKE_PREFIX_PATH}")
+	message("####SUBDIRQT PATH### ${SUBDIRQT}")
+	message("####SUBDIRPY PATH### ${SUBDIRPY}")
 	SET ( DEFAULT_OSX        ON )
 	SET ( DEFAULT_USB_HID    ON )
 elseif ( "${PLATFORM}" STREQUAL "rpi" )
