add flatbuffer dependencies

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = dependencies/external/rpi_ws281x
 	url = https://github.com/hyperion-project/rpi_ws281x.git
 	branch = master
+[submodule "dependencies/external/flatbuffers"]
+	path = dependencies/external/flatbuffers
+	url = git://github.com/google/flatbuffers.git
