even more changes
Signed-off-by: Paulchen-Panther <Paulchen--Panter@gmx.net>

--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(commandline)
 add_subdirectory(blackborder)
 add_subdirectory(jsonserver)
 add_subdirectory(protoserver)
+add_subdirectory(flatbufserver)
 add_subdirectory(bonjour)
 add_subdirectory(boblightserver)
 add_subdirectory(udplistener)
