--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ SET ( DEFAULT_X11        OFF )
 SET ( DEFAULT_WS281XPWM  OFF )
 SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
 SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS OFF )
+SET ( DEFAULT_USE_SYSTEM_FLATBUFFERS_LIBS OFF )
 SET ( DEFAULT_TESTS      OFF )
 
 IF ( ${CMAKE_SYSTEM} MATCHES "Linux" )
@@ -163,6 +164,9 @@ message(STATUS "ENABLE_PROFILER = ${ENABLE_PROFILER}")
 SET ( PROTOBUF_INSTALL_BIN_DIR ${CMAKE_BINARY_DIR}/proto )
 SET ( PROTOBUF_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/proto )
 
+SET ( FLATBUFFERS_INSTALL_BIN_DIR ${CMAKE_BINARY_DIR}/flatbuf )
+SET ( FLATBUFFERS_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/flatbuf )
+
 # check all  json files
 FILE ( GLOB_RECURSE HYPERION_SCHEMAS RELATIVE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/libsrc/*schema*.json )
 SET( JSON_FILES
@@ -246,7 +250,7 @@ if (UNIX AND NOT APPLE)
 endif ()
 
 # add QT5 dependency
-SET(QT_MIN_VERSION "5.2.0")
+SET(QT_MIN_VERSION "5.5.0")
 find_package(Qt5 COMPONENTS Core Gui Network SerialPort REQUIRED)
 message( STATUS "Found Qt Version: ${Qt5Core_VERSION}" )
 IF ( "${Qt5Core_VERSION}" VERSION_LESS "${QT_MIN_VERSION}" )
