--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -7,9 +7,9 @@ add_subdirectory(hyperion)
 add_subdirectory(commandline)
 add_subdirectory(blackborder)
 add_subdirectory(jsonserver)
-add_subdirectory(protoserver)
 add_subdirectory(flatbufserver)
 add_subdirectory(bonjour)
+add_subdirectory(ssdp)
 add_subdirectory(boblightserver)
 add_subdirectory(udplistener)
 add_subdirectory(leddevice)
