--- a/src/hyperion-v4l2/CMakeLists.txt
+++ b/src/hyperion-v4l2/CMakeLists.txt
@@ -4,8 +4,8 @@ project(hyperion-v4l2)
 find_package(Qt5Widgets REQUIRED)
 
 include_directories(
-	${CMAKE_CURRENT_BINARY_DIR}/../../libsrc/protoserver
-	${PROTOBUF_INCLUDE_DIRS}
+	${CMAKE_CURRENT_BINARY_DIR}/../../libsrc/flatbufserver
+	${FLATBUFFERS_INCLUDE_DIRS}
 )
 
 set(Hyperion_V4L2_HEADERS
@@ -28,7 +28,9 @@ target_link_libraries(${PROJECT_NAME}
 	commandline
 	blackborder
 	hyperion-utils
-	protoclient
+	flatbufserver
+	flatbuffers
+	ssdp
 	Qt5::Core
 	Qt5::Gui
 	Qt5::Network
