--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(hyperiond)
 add_subdirectory(hyperion-remote)
 
-# The following clients depend on the protobuf library
+# The following binaries are just compiled if requested
 if (ENABLE_AMLOGIC)
 	add_subdirectory(hyperion-aml)
 endif()
