Commits from @MartB and more ... - Commit: https://github.com/hyperion-project/hyperion.ng/commit/1d9165f403fc1ab2d1135efbdd8f96c829974fb0 - New default QT capture implementation - UploadHandler added to Effects Configurator to allow uploading GIF files - Docker compile script and instruction - Travis Fix

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 	branch = master
 [submodule "dependencies/external/flatbuffers"]
 	path = dependencies/external/flatbuffers
-	url = git://github.com/google/flatbuffers.git
+	url = https://github.com/google/flatbuffers
