Troubleshooting and ... - More i18n - Easy use of mutual exclusion in JsonAPI with QMutexLocker - Smoothing type "linear" hidden in the WebUI, because there is currently only one - Message forwarding implemented again - For compatibility to home assistants and other remote controls, "activeEffects" and "activeLedColor" has been added to the JSON-RPC - FlatBuffer clear now the Priority on disconnect - The information "available V4L2 devices" is now only displayed if the device list is not empty - LED device "PiBlaster" excluded from OSX build

--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -3,6 +3,10 @@
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/hyperion)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/hyperion)
 
+include_directories(
+	${CMAKE_CURRENT_BINARY_DIR}/../../libsrc/flatbufserver
+)
+
 FILE ( GLOB Hyperion_SOURCES "${CURRENT_HEADER_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
 
 SET(Hyperion_RESOURCES ${CURRENT_SOURCE_DIR}/resource.qrc)
@@ -15,6 +19,8 @@ add_library(hyperion
 target_link_libraries(hyperion
 	blackborder
 	hyperion-utils
+	flatbufserver
+	flatbuffers
 	leddevice
 	bonjour
 	boblightserver
