add extra linking libraries

--- a/src/hyperion-remote/CMakeLists.txt
+++ b/src/hyperion-remote/CMakeLists.txt
@@ -27,7 +27,8 @@ target_link_libraries(${PROJECT_NAME}
 	hyperion-utils
 	Qt5::Gui
 	Qt5::Core
-	Qt5::Network)
+	Qt5::Network
+	pcre16 dl z)
 
 install ( TARGETS ${PROJECT_NAME} DESTINATION "share/hyperion/bin/" COMPONENT "${PLATFORM}" )
 
