--- a/src/hyperion-v4l2/CMakeLists.txt
+++ b/src/hyperion-v4l2/CMakeLists.txt
@@ -34,6 +34,12 @@ target_link_libraries(${PROJECT_NAME}
 	Qt5::Network
 )
 
+if (ENABLE_AMLOGIC)
+	target_link_libraries(${PROJECT_NAME}
+		pcre16 dl z
+	)
+endif()
+
 install ( TARGETS ${PROJECT_NAME} DESTINATION "share/hyperion/bin/" COMPONENT "${PLATFORM}" )
 
 if(CMAKE_HOST_UNIX)
