--- a/src/hyperion-remote/CMakeLists.txt
+++ b/src/hyperion-remote/CMakeLists.txt
@@ -29,6 +29,12 @@ target_link_libraries(${PROJECT_NAME}
 	Qt5::Core
 	Qt5::Network)
 
+if (ENABLE_AMLOGIC)
+	target_link_libraries(${PROJECT_NAME}
+		pcre16 dl z
+	)
+endif()
+
 install ( TARGETS ${PROJECT_NAME} DESTINATION "share/hyperion/bin/" COMPONENT "${PLATFORM}" )
 
 if(CMAKE_HOST_UNIX)
