--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(PythonLibs 3.4 REQUIRED)
+find_package(Qt5Widgets REQUIRED)
 include_directories(${PYTHON_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS}/..)
 
 add_executable(hyperiond
@@ -65,6 +66,8 @@ endif ()
 if (ENABLE_QT)
 	target_link_libraries(hyperiond	qt-grabber)
 endif ()
+
+target_link_libraries(hyperiond Qt5::Widgets)
 
 install ( TARGETS hyperiond DESTINATION "share/hyperion/bin/" COMPONENT "${PLATFORM}" )
 install ( DIRECTORY ${CMAKE_SOURCE_DIR}/bin/service DESTINATION "share/hyperion/" COMPONENT  "${PLATFORM}" )
