ProtoBuffer, UDPListener ... Protocol Buffer reimplemented to receive image data from third-party apps The status of the component "UDPListener" is now displayed correctly in WebUI Global signal names for WebUI added

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,8 @@
 [submodule "dependencies/external/flatbuffers"]
 	path = dependencies/external/flatbuffers
 	url = https://github.com/google/flatbuffers
+	branch = master
+[submodule "dependencies/external/protobuf"]
+	path = dependencies/external/protobuf
+	url = https://github.com/hyperion-project/protobuf.git
+	branch = master
